--- a/araclarimiz.html
+++ b/araclarimiz.html
@@ -56,7 +56,7 @@
 			<div class="card-body">
 			  <h4 class="card-title">Volkswagen Polo</h4>
 			  <p class="card-text">1.6 Dizel Motor ve Manuel Şanzıman ile ekonomik ve konforlu bir sürüş sizleri bekliyor.</p>
-			  <p class="product-price"><span class="h2"><small>140 <span class="product-currency">₺</span> </small></span> Günlük</p>
+			  <p class="product-price"><span class="h2"><small>140 <span class="product-currency">&#8378;</span> </small></span> Günlük</p>
 			   <br>
 			  <a href="iletisim.html" class="btn btn-danger">Rezervasyon</a>
 			</div>
@@ -67,7 +67,7 @@
 			<div class="card-body">
 			  <h4 class="card-title">Citroen C-Elysee</h4>
 			  <p class="card-text">Siyah ve Beyaz renk seçenekleri, Manuel Şanzıman ve benzinli motoru ile konforlu yolculuklar sizleri bekliyor</p>
-			  <p class="product-price"><span class="h2"><small>120 <span class="product-currency">₺</span> </small></span> Günlük</p>
+			  <p class="product-price"><span class="h2"><small>120 <span class="product-currency">&#8378;</span> </small></span> Günlük</p>
 			   <br>
 			  <a href="iletisim.html" class="btn btn-danger">Rezervasyon</a>
 			</div>
@@ -78,7 +78,7 @@
 			<div class="card-body">
 			  <h4 class="card-title">Fiat Egea</h4>
 			  <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-			  <p class="product-price"><span class="h2"><small>150 <span class="product-currency">₺</span> </small></span> Günlük</p>
+			  <p class="product-price"><span class="h2"><small>150 <span class="product-currency">&#8378;</span> </small></span> Günlük</p>
 			   <br>
 			  <a href="iletisim.html" class="btn btn-danger">Rezervasyon</a>
 			</div>
@@ -89,7 +89,7 @@
 			<div class="card-body">
 			  <h4 class="card-title">Peugeot 208</h4>
 			  <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-			  <p class="product-price"><span class="h2"><small>170 <span class="product-currency">₺</span> </small></span> Günlük</p>
+			  <p class="product-price"><span class="h2"><small>170 <span class="product-currency">&#8378;</span> </small></span> Günlük</p>
 			   <br>
 			  <a href="iletisim.html" class="btn btn-danger">Rezervasyon</a>
 			</div>
@@ -100,7 +100,7 @@
 			<div class="card-body">
 			  <h4 class="card-title">Ford Fiesta</h4>
 			  <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-			  <p class="product-price"><span class="h2"><small>110 <span class="product-currency">₺</span> </small></span> Günlük</p>
+			  <p class="product-price"><span class="h2"><small>110 <span class="product-currency">&#8378;</span> </small></span> Günlük</p>
 			   <br>
 			  <a href="iletisim.html" class="btn btn-danger">Rezervasyon</a>
 			</div>
@@ -111,7 +111,7 @@
 			<div class="card-body">
 			  <h4 class="card-title">Citroen C4 Cactus</h4>
 			  <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-			  <p class="product-price"><span class="h2"><small>190 <span class="product-currency">₺</span> </small></span> Günlük</p>
+			  <p class="product-price"><span class="h2"><small>190 <span class="product-currency">&#8378;</span> </small></span> Günlük</p>
 			   <br>
 			  <a href="iletisim.html" class="btn btn-danger">Rezervasyon</a>
 			</div>
