--- a/araclarimiz.html
+++ b/araclarimiz.html
@@ -56,7 +56,7 @@
 			<div class="card-body">
 			  <h4 class="card-title">Volkswagen Polo</h4>
 			  <p class="card-text">1.6 Dizel Motor ve Manuel Şanzıman ile ekonomik ve konforlu bir sürüş sizleri bekliyor.</p>
-			  <p class="product-price"><span class="h2"><small>140 <span class="product-currency"><i class="fa fa-try" aria-hidden="true"></i></span> </small></span> Günlük</p>
+			  <p class="product-price"><span class="h2"><small>140 <span class="product-currency">TL</span> </small></span> Günlük</p>
 			   <br>
 			  <a href="iletisim.html" class="btn btn-danger">Rezervasyon</a>
 			</div>
@@ -67,7 +67,7 @@
 			<div class="card-body">
 			  <h4 class="card-title">Citroen C-Elysee</h4>
 			  <p class="card-text">Siyah ve Beyaz renk seçenekleri, Manuel Şanzıman ve benzinli motoru ile konforlu yolculuklar sizleri bekliyor</p>
-			  <p class="product-price"><span class="h2"><small>120 <span class="product-currency"><i class="fa fa-try" aria-hidden="true"></i></span> </small></span> Günlük</p>
+			  <p class="product-price"><span class="h2"><small>120 <span class="product-currency">TL</span> </small></span> Günlük</p>
 			   <br>
 			  <a href="iletisim.html" class="btn btn-danger">Rezervasyon</a>
 			</div>
